target/generated-sources/antlr4/be/unamur/info/b314/compiler/B314_InitParser.java
// Generated from be\u005Cunamur\info\b314\compiler\B314_Init.g4 by ANTLR 4.6
package be.unamur.info.b314.compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class B314_InitParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ID=1, NUMBER=2, COMMENT=3, NEWLINE=4, WS=5, START=6, DLOCAL=7, TSTART=8, 
		WHEN=9, DO=10, DONE=11, BYDEF=12, BOOLEAN=13, INTEGER=14, SQUARE=15, CROCHET_OUVERT=16, 
		VIRGULE=17, CROCHET_FERME=18, PAR_OUVERT=19, PAR_FERME=20, NOT=21, NEARBY=22, 
		PLUS=23, MOINS=24, MUL=25, DIV=26, DIV_ENT=27, AND=28, OR=29, INF=30, 
		SUP=31, EGALE=32, LATITUDE=33, LONGITUDE=34, GRID_SIZE=35, MAP=36, RADIO=37, 
		AMMO=38, FRUITS=39, SODA=40, COUNT=41, LIFE=42, TRUE=43, FALSE=44, ENNEMI=45, 
		IS=46, NORTH=47, SOUTH=48, EAST=49, WEST=50, GRAAL=51, DIRT=52, ROCK=53, 
		VINES=54, ZOMBIE=55, PLAYER=56, DIGIT=57, SKIPPPP=58, IF=59, THEN=60, 
		ELSE=61, WHILE=62, SET=63, TO=64, COMPUTE=65, NEXT=66, MOVE=67, SHOOT=68, 
		USE=69, NOTHING=70, POINtVIRGULE=71, AS=72, FUNCTION=73, DEUXPOINTS=74, 
		VOID=75;
	public static final int
		RULE_type = 0, RULE_scalar = 1, RULE_array = 2, RULE_exprD = 3, RULE_environnementInt = 4, 
		RULE_environnementBool = 5, RULE_environnementCase = 6, RULE_exprG = 7, 
		RULE_entier = 8, RULE_instruction = 9, RULE_action = 10, RULE_programme = 11, 
		RULE_progDecl = 12, RULE_fctDecl = 13, RULE_fctType = 14, RULE_paramDecl = 15, 
		RULE_varDecl = 16, RULE_clauseWhen = 17, RULE_clauseDefault = 18;
	public static final String[] ruleNames = {
		"type", "scalar", "array", "exprD", "environnementInt", "environnementBool", 
		"environnementCase", "exprG", "entier", "instruction", "action", "programme", 
		"progDecl", "fctDecl", "fctType", "paramDecl", "varDecl", "clauseWhen", 
		"clauseDefault"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, "'declare and retain'", "'declare local'", 
		"'when your turn'", "'when'", "'do'", "'done'", "'by default'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ID", "NUMBER", "COMMENT", "NEWLINE", "WS", "START", "DLOCAL", "TSTART", 
		"WHEN", "DO", "DONE", "BYDEF", "BOOLEAN", "INTEGER", "SQUARE", "CROCHET_OUVERT", 
		"VIRGULE", "CROCHET_FERME", "PAR_OUVERT", "PAR_FERME", "NOT", "NEARBY", 
		"PLUS", "MOINS", "MUL", "DIV", "DIV_ENT", "AND", "OR", "INF", "SUP", "EGALE", 
		"LATITUDE", "LONGITUDE", "GRID_SIZE", "MAP", "RADIO", "AMMO", "FRUITS", 
		"SODA", "COUNT", "LIFE", "TRUE", "FALSE", "ENNEMI", "IS", "NORTH", "SOUTH", 
		"EAST", "WEST", "GRAAL", "DIRT", "ROCK", "VINES", "ZOMBIE", "PLAYER", 
		"DIGIT", "SKIPPPP", "IF", "THEN", "ELSE", "WHILE", "SET", "TO", "COMPUTE", 
		"NEXT", "MOVE", "SHOOT", "USE", "NOTHING", "POINtVIRGULE", "AS", "FUNCTION", 
		"DEUXPOINTS", "VOID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "B314_Init.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public B314_InitParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TypeContext extends ParserRuleContext {
		public ScalarContext scalar() {
			return getRuleContext(ScalarContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				scalar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScalarContext extends ParserRuleContext {
		public TerminalNode BOOLEAN() { return getToken(B314_InitParser.BOOLEAN, 0); }
		public TerminalNode INTEGER() { return getToken(B314_InitParser.INTEGER, 0); }
		public TerminalNode SQUARE() { return getToken(B314_InitParser.SQUARE, 0); }
		public ScalarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scalar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterScalar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitScalar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitScalar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScalarContext scalar() throws RecognitionException {
		ScalarContext _localctx = new ScalarContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scalar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INTEGER) | (1L << SQUARE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public ScalarContext scalar() {
			return getRuleContext(ScalarContext.class,0);
		}
		public TerminalNode CROCHET_OUVERT() { return getToken(B314_InitParser.CROCHET_OUVERT, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(B314_InitParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(B314_InitParser.NUMBER, i);
		}
		public TerminalNode CROCHET_FERME() { return getToken(B314_InitParser.CROCHET_FERME, 0); }
		public TerminalNode VIRGULE() { return getToken(B314_InitParser.VIRGULE, 0); }
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitArray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			scalar();
			setState(45);
			match(CROCHET_OUVERT);
			setState(46);
			match(NUMBER);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VIRGULE) {
				{
				setState(47);
				match(VIRGULE);
				setState(48);
				match(NUMBER);
				}
			}

			setState(51);
			match(CROCHET_FERME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprDContext extends ParserRuleContext {
		public ExprDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprD; }
	 
		public ExprDContext() { }
		public void copyFrom(ExprDContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprParContext extends ExprDContext {
		public TerminalNode PAR_OUVERT() { return getToken(B314_InitParser.PAR_OUVERT, 0); }
		public ExprDContext exprD() {
			return getRuleContext(ExprDContext.class,0);
		}
		public TerminalNode PAR_FERME() { return getToken(B314_InitParser.PAR_FERME, 0); }
		public ExprParContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterExprPar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitExprPar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitExprPar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprEnvCaseContext extends ExprDContext {
		public EnvironnementCaseContext environnementCase() {
			return getRuleContext(EnvironnementCaseContext.class,0);
		}
		public ExprEnvCaseContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterExprEnvCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitExprEnvCase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitExprEnvCase(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprEntierContext extends ExprDContext {
		public EntierContext entier() {
			return getRuleContext(EntierContext.class,0);
		}
		public ExprEntierContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterExprEntier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitExprEntier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitExprEntier(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprNearbyContext extends ExprDContext {
		public TerminalNode NEARBY() { return getToken(B314_InitParser.NEARBY, 0); }
		public TerminalNode CROCHET_OUVERT() { return getToken(B314_InitParser.CROCHET_OUVERT, 0); }
		public List<ExprDContext> exprD() {
			return getRuleContexts(ExprDContext.class);
		}
		public ExprDContext exprD(int i) {
			return getRuleContext(ExprDContext.class,i);
		}
		public TerminalNode VIRGULE() { return getToken(B314_InitParser.VIRGULE, 0); }
		public TerminalNode CROCHET_FERME() { return getToken(B314_InitParser.CROCHET_FERME, 0); }
		public ExprNearbyContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterExprNearby(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitExprNearby(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitExprNearby(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprDexprGContext extends ExprDContext {
		public ExprGContext exprG() {
			return getRuleContext(ExprGContext.class,0);
		}
		public ExprDexprGContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterExprDexprG(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitExprDexprG(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitExprDexprG(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionCallContext extends ExprDContext {
		public TerminalNode ID() { return getToken(B314_InitParser.ID, 0); }
		public TerminalNode PAR_OUVERT() { return getToken(B314_InitParser.PAR_OUVERT, 0); }
		public TerminalNode PAR_FERME() { return getToken(B314_InitParser.PAR_FERME, 0); }
		public List<ExprDContext> exprD() {
			return getRuleContexts(ExprDContext.class);
		}
		public ExprDContext exprD(int i) {
			return getRuleContext(ExprDContext.class,i);
		}
		public List<TerminalNode> VIRGULE() { return getTokens(B314_InitParser.VIRGULE); }
		public TerminalNode VIRGULE(int i) {
			return getToken(B314_InitParser.VIRGULE, i);
		}
		public FunctionCallContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprEnvIntContext extends ExprDContext {
		public EnvironnementIntContext environnementInt() {
			return getRuleContext(EnvironnementIntContext.class,0);
		}
		public ExprEnvIntContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterExprEnvInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitExprEnvInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitExprEnvInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprEnvBoolContext extends ExprDContext {
		public EnvironnementBoolContext environnementBool() {
			return getRuleContext(EnvironnementBoolContext.class,0);
		}
		public ExprEnvBoolContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterExprEnvBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitExprEnvBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitExprEnvBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprOpContext extends ExprDContext {
		public ExprDContext expr1;
		public Token op;
		public ExprDContext expr2;
		public TerminalNode NOT() { return getToken(B314_InitParser.NOT, 0); }
		public List<ExprDContext> exprD() {
			return getRuleContexts(ExprDContext.class);
		}
		public ExprDContext exprD(int i) {
			return getRuleContext(ExprDContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(B314_InitParser.PLUS, 0); }
		public TerminalNode MOINS() { return getToken(B314_InitParser.MOINS, 0); }
		public TerminalNode MUL() { return getToken(B314_InitParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(B314_InitParser.DIV, 0); }
		public TerminalNode DIV_ENT() { return getToken(B314_InitParser.DIV_ENT, 0); }
		public TerminalNode AND() { return getToken(B314_InitParser.AND, 0); }
		public TerminalNode OR() { return getToken(B314_InitParser.OR, 0); }
		public TerminalNode INF() { return getToken(B314_InitParser.INF, 0); }
		public TerminalNode SUP() { return getToken(B314_InitParser.SUP, 0); }
		public TerminalNode EGALE() { return getToken(B314_InitParser.EGALE, 0); }
		public ExprOpContext(ExprDContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).enterExprOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof B314_InitListener ) ((B314_InitListener)listener).exitExprOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof B314_InitVisitor ) return ((B314_InitVisitor<? extends T>)visitor).visitExprOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprDContext exprD() throws RecognitionException {
		return exprD(0);
	}

	private ExprDContext exprD(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprDContext _localctx = new ExprDContext(_ctx, _parentState);
		ExprDContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_exprD, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new ExprEntierContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(54);
				entier();
				}
				break;
			case 2:
				{
				_localctx = new ExprEnvIntContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(55);
				environnementInt();
				}
				break;
			case 3:
				{
				_localctx = new ExprEnvBoolContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56);
				environnementBool();
				}
				break;
			case 4:
				{
				_localctx = new ExprEnvCaseContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(57);
				environnementCase();
				}
				break;
			case 5:
				{
				_localctx = new ExprDexprGContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(58);
				exprG();
				}
				break;
			case 6:
				{
				_localctx = new FunctionCallContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(59);
				match(ID);
				setState(60);
				match(PAR_OUVERT);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << PAR_OUVERT) | (1L << NOT) | (1L << NEARBY) | (1L << MOINS) | (1L << LATITUDE) | (1L << LONGITUDE) | (1L << GRID_SIZE) | (1L << MAP) | (1L << RADIO) | (1L << AMMO) | (1L << FRUITS) | (1L << SODA) | (1L << LIFE) | (1L << TRUE) | (1L << FALSE) | (1L << ENNEMI) | (1L << GRAAL) | (1L << DIRT) | (1L << ROCK) | (1L << VINES) | (1L << ZOMBIE) | (1L << PLAYER) | (1L << DIGIT))) != 0)) {
					{
					setState(61);
					exprD(0);
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==VIRGULE) {
						{
						{
						setState(62);
						match(VIRGULE);
						setState(63);
						exprD(0);
						}
						}
						setState(68);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(71);
				match(PAR_FERME);
				}
				break;
			case 7:
				{
				_localctx = new ExprParContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(72);
				match(PAR_OUVERT);
				setState(73);
				exprD(0);
				setState(74);
				match(PAR_FERME);
				}
				break;
			case 8:
				{
				_localctx = new ExprOpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(76);
				match(NOT);
				setState(77);
				exprD(6);
				}
				break;
			case 9:
				{
				_localctx = new ExprNearbyContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(78);
				match(NEARBY);
				setState(79);
				match(CROCHET_OUVERT);
				setState(80);
				exprD(0);
				setState(81);
				match(VIRGULE);
				setState(82);
				exprD(0);
				setState(83);
				match(CROCHET_FERME);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(99);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ExprOpContext(new ExprDContext(_parentctx, _parentState));
						((ExprOpContext)_localctx).expr1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_exprD);
						setState(87);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(88);
						((ExprOpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MOINS) ) {
							((ExprOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(89);
						((ExprOpContext)_localctx).expr2 = exprD(6);
						}
						break;
					case 2:
						{
						_localctx = new ExprOpContext(new ExprDContext(_parentctx, _parentState));
						((ExprOpContext)_localctx).expr1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_exprD);
						setState(90);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(91);
						((ExprOpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MUL) | (1L << DIV) | (1L << DIV_ENT))) != 0)) ) {
							((ExprOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(92);
						((ExprOpContext)_localctx).expr2 = exprD(5);
						}
						break;
					case 3:
						{
						_localctx = new ExprOpContext(new ExprDContext(_parentctx, _parentState));
						((ExprOpContext)_localctx).expr1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_exprD);
						setState(93);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(94);
						((ExprOpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==AND || _la==OR) ) {
							((ExprOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(95);
						((ExprOpContext)_localctx).expr2 = exprD(4);
						}
						break;
					case 4:
						{
						_localctx = new ExprOpContext(new ExprDContext(_parentctx, _parentState));
						((ExprOpContext)_localctx).expr1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_exprD);
						setState(96);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(97);
						((ExprOpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INF) | (1L << SUP) | (1L << EGALE))) != 0)) ) {
							((ExprOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(98);
						((ExprOpContext)_localctx).expr2 = exprD(3);
						}
						break;
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
